# health-fitness-analytics

./: .gitignore  404.html  BACKEND_ANALYSIS.md  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
ai_analytics/: index.html
architecture/: index.html
backend/: alembic.ini  auth_server.py  check_config.py  clean_main.py  health_fitness_analytics.db  index.html  main.py  test_ai_endpoints.py  test_api_validation.py  test_auth_direct.py  test_auth_only.py  test_db_connection.py  test_health_direct.py
backend/ai/: achievement_engine.py  anomaly_detector.py  correlation_analyzer.py  goal_optimizer.py  health_coach.py  health_insights_engine.py  pattern_recognition.py  recommendation_engine.py
backend/alembic/: env.py
backend/api/: deps.py
best_practices/: index.html
code_style/: index.html
data_integrations/: index.html
deployment/: index.html
docs/: README.md  ai_analytics.md  architecture.md  backend.md  best_practices.md  code_style.md  data_integrations.md  deployment.md  env_setup.md  frontend.md  security.md  testing.md
env_setup/: index.html
frontend/: Dockerfile  index.html  package-lock.json
ios-app/: README.md
memory-bank/: PHASE_1_MOCK_DATA_REPLACEMENT_COMPLETE.md  PHASE_5_CURRENT_STATUS_AND_PLAN.md  PHASE_5_WEEK_1_IMPLEMENTATION.md  PROJECT_COMPLETION_SUMMARY.md  activeContext.md  implementation-plan.md  phase4-plan.md  phase5-plan.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
security/: index.html
site/: 404.html  sitemap.xml
testing/: index.html
(+169 files in other folders)
